fixed scrollbar color

--- a/src/templates/assets/styles/style.scss
+++ b/src/templates/assets/styles/style.scss
@@ -15,7 +15,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: transparent;
+  background: var(--scrollbar-thumb-color);
   border-radius: 5px;
 }
 
